@@ -56,6 +56,9 @@ caption {
     margin: 5px auto;
 }
 
+label {
+	cursor:pointer;
+}
 
 .center {
     text-align: center;
